syntax = "proto3";

option java_package="com.example.grpc";
import "google/protobuf/timestamp.proto";

service ChatService {
  rpc SendChatMessage (stream ChatMessage) returns (stream ChatMessageFromServer);
}

message ChatMessage {
  string username = 1;
  string message = 2;
}


message ChatMessageFromServer {
  google.protobuf.Timestamp  timestamp =1;
  ChatMessage message = 2;
}
